Header and info changes

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         <div class="awesome-container">
             <div class="awesome-text">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the
+                <p class="hero_main">This website is awesome</p>
+                <p class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the
                     color is lower contrast</p>
-                <button>Sign up</button>
+                <button class="header_button">Sign up</button>
             </div>
             <div>
                 <img class="holder" src="" alt="">
@@ -40,21 +40,24 @@
     </header>
 
     <!--Information Section-->
-    <section>
-        <div>
-            <img src="" alt="">
+
+    <p class="info_header">Some random information.</p>
+
+    <section class="information_container">
+        <div class="card">
+            <img class="info_box" src="" alt="">
             <p>This is some subtext under an illustration or image</p>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="card">
+            <img class="info_box" src="" alt="">
             <p>This is some subtext under an illustration or image</p>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="card">
+            <img class="info_box" src="" alt="">
             <p>This is some subtext under an illustration or image</p>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="card">
+            <img class="info_box" src="" alt="">
             <p>This is some subtext under an illustration or image</p>
         </div>
     </section>
